--- a/i3/config
+++ b/i3/config
@@ -162,7 +162,8 @@ bindsym $sup+f exec spacefm
 bindsym $sup+t exec transmission-gtk
 bindsym $sup+x exec xcalc
 bindsym $sup+p exec arandr
-
+bindsym $sup+m exec amixer -q set Master 100% unmute
+bindsym $sup+e exec amixer -q set Master 20% unmute
 # Floating window configurations
 for_window [title="Hangouts"] floating disabled
 for_window [title="Calculator"] floating enabled
