--- a/i3/config
+++ b/i3/config
@@ -3,7 +3,7 @@ set $sup Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:mono 8
+font Fixed
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
