Change lockscreen behaviour

--- a/i3/config
+++ b/i3/config
@@ -160,7 +160,7 @@ bindsym XF86Display exec arandr
  bindsym $sup+h exec chromium --app-id=knipolnnllmklapflnccelgolnpehhpl      
  bindsym $sup+n exec chromium --incognito                                    
  bindsym $sup+v exec gvim                                                    
- bindsym $sup+l exec i3lock -c FF7700 -d -f && sleep 1 && xset dpms force off
+ bindsym $sup+l exec i3lock -c FF7700 -d -f -u -e && sleep 1 && xset dpms force off
  bindsym $sup+f exec spacefm                                                 
  bindsym $sup+t exec transmission-gtk                                        
  bindsym $sup+x exec xcalc                                                   
