--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,7 @@
 	path = vim/bundle/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
 	branch = master
+[submodule "vim/bundle/DidYouMean"]
+	path = vim/bundle/DidYouMean
+	url = https://github.com/EinfachToll/DidYouMean.git
+	branch = master
