--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,7 @@
 	path = vim/bundle/DidYouMean
 	url = https://github.com/EinfachToll/DidYouMean.git
 	branch = master
+[submodule "vim/bundle/vim-sleuth"]
+	path = vim/bundle/vim-sleuth
+	url = https://github.com/tpope/vim-sleuth.git
+	branch = master
