--- a/i3/config
+++ b/i3/config
@@ -133,17 +133,17 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 mode "volume" {
-	bindsym grave exec amixer -q set Master 0% unmute
-	bindsym 1 exec amixer -q set Master 10% unmute
-	bindsym 2 exec amixer -q set Master 20% unmute
-	bindsym 3 exec amixer -q set Master 30% unmute
-	bindsym 4 exec amixer -q set Master 40% unmute
-	bindsym 5 exec amixer -q set Master 50% unmute
-	bindsym 6 exec amixer -q set Master 60% unmute
-	bindsym 7 exec amixer -q set Master 70% unmute
-	bindsym 8 exec amixer -q set Master 80% unmute
-	bindsym 9 exec amixer -q set Master 90% unmute
-	bindsym 0 exec amixer -q set Master 100% unmute
+	bindsym grave exec amixer -q set Master 0% unmute; mode "default"
+	bindsym 1 exec amixer -q set Master 10% unmute; mode "default"
+	bindsym 2 exec amixer -q set Master 20% unmute; mode "default"
+	bindsym 3 exec amixer -q set Master 30% unmute; mode "default"
+	bindsym 4 exec amixer -q set Master 40% unmute; mode "default"
+	bindsym 5 exec amixer -q set Master 50% unmute; mode "default"
+	bindsym 6 exec amixer -q set Master 60% unmute; mode "default"
+	bindsym 7 exec amixer -q set Master 70% unmute; mode "default"
+	bindsym 8 exec amixer -q set Master 80% unmute; mode "default"
+	bindsym 9 exec amixer -q set Master 90% unmute; mode "default"
+	bindsym 0 exec amixer -q set Master 100% unmute; mode "default"
 
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
