Add vim-bufonly plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 	path = vim/pack/plugins/start/vim-sleuth
 	url = https://github.com/tpope/vim-sleuth.git
 	branch = master
+[submodule "vim/pack/plugins/start/vim-bufonly"]
+	path = vim/pack/plugins/start/vim-bufonly
+	url = https://github.com/schickling/vim-bufonly.git
