--- a/i3/config
+++ b/i3/config
@@ -96,6 +96,18 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+# move focused container to workspace and switch to workspace
+bindsym $mod+Control+1 move container to workspace 1; workspace 1
+bindsym $mod+Control+2 move container to workspace 2; workspace 2
+bindsym $mod+Control+3 move container to workspace 3; workspace 3
+bindsym $mod+Control+4 move container to workspace 4; workspace 4
+bindsym $mod+Control+5 move container to workspace 5; workspace 5
+bindsym $mod+Control+6 move container to workspace 6; workspace 6
+bindsym $mod+Control+7 move container to workspace 7; workspace 7
+bindsym $mod+Control+8 move container to workspace 8; workspace 8
+bindsym $mod+Control+9 move container to workspace 9; workspace 9
+bindsym $mod+Control+0 move container to workspace 10; workspace 10; 
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
