--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,4 @@
 [submodule "vim/pack/plugins/start/vim-bufonly"]
 	path = vim/pack/plugins/start/vim-bufonly
 	url = https://github.com/schickling/vim-bufonly.git
+	ignore = dirty
