--- a/i3/config
+++ b/i3/config
@@ -106,7 +106,7 @@ bindsym $mod+Control+6 move container to workspace 6; workspace 6
 bindsym $mod+Control+7 move container to workspace 7; workspace 7
 bindsym $mod+Control+8 move container to workspace 8; workspace 8
 bindsym $mod+Control+9 move container to workspace 9; workspace 9
-bindsym $mod+Control+0 move container to workspace 10; workspace 10; 
+bindsym $mod+Control+0 move container to workspace 10; workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
