--- a/i3/config
+++ b/i3/config
@@ -207,7 +207,7 @@ bindsym $sup+c exec chromium
 bindsym $sup+h exec chromium --app-id=knipolnnllmklapflnccelgolnpehhpl
 bindsym $sup+n exec chromium --incognito
 bindsym $sup+v exec gvim
-bindsym $sup+l exec i3lock -c FF7700 -d -f && sleep 1 && xset dpms force off
+bindsym $sup+l exec lock-screen
 bindsym $sup+f exec pcmanfm
 bindsym $sup+t exec transmission-gtk
 bindsym $sup+x exec xcalc
