--- a/.gitmodules
+++ b/.gitmodules
@@ -39,10 +39,6 @@
 	path = vim/pack/plugins/start/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
 	branch = master
-[submodule "vim/pack/plugins/start/vim-localvimrc"]
-	path = vim/pack/plugins/start/vim-localvimrc
-	url = https://github.com/Denton-L/vim-localvimrc.git
-	branch = master
 [submodule "vim/pack/plugins/start/vim-editorconfig"]
 	path = vim/pack/plugins/start/vim-editorconfig
 	url = https://github.com/sgur/vim-editorconfig.git
@@ -50,4 +46,8 @@
 [submodule "vim/pack/plugins/start/vimtex"]
 	path = vim/pack/plugins/start/vimtex
 	url = https://github.com/lervag/vimtex.git
+	branch = master
+[submodule "vim-localvimrc"]
+	path = vim/pack/plugins/start/vim-localvimrc
+	url = https://github.com/embear/vim-localvimrc.git
 	branch = master
