Add brightness keybindings

--- a/i3/config
+++ b/i3/config
@@ -202,6 +202,10 @@ bindsym XF86AudioStop exec playerctl stop
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
+# Brightness keybindings
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10
+
 # Print Screen keybindings
 set $scrot-clip scrot -e 'xclip -sel clip -t image/png $f; mv $f ~/Screenshots/'
 
