--- a/.gitmodules
+++ b/.gitmodules
@@ -54,3 +54,6 @@
 [submodule "vim/pack/plugins/start/vim-unimpaired"]
 	path = vim/pack/plugins/start/vim-unimpaired
 	url = https://github.com/tpope/vim-unimpaired.git
+[submodule "vim/pack/plugins/start/vim-exchange"]
+	path = vim/pack/plugins/start/vim-exchange
+	url = https://github.com/tommcdo/vim-exchange.git
