--- a/.gitmodules
+++ b/.gitmodules
@@ -54,6 +54,8 @@
 [submodule "vim/pack/plugins/start/vim-unimpaired"]
 	path = vim/pack/plugins/start/vim-unimpaired
 	url = https://github.com/tpope/vim-unimpaired.git
+	branch = master
 [submodule "vim/pack/plugins/start/vim-exchange"]
 	path = vim/pack/plugins/start/vim-exchange
 	url = https://github.com/tommcdo/vim-exchange.git
+	branch = master
