--- a/i3/config
+++ b/i3/config
@@ -154,7 +154,7 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-mode "volume" {
+mode "media" {
 	bindsym grave exec amixer -q set Master 0% unmute; mode "default"
 	bindsym 1 exec amixer -q set Master 10% unmute; mode "default"
 	bindsym 2 exec amixer -q set Master 20% unmute; mode "default"
@@ -168,11 +168,16 @@ mode "volume" {
 	bindsym 0 exec amixer -q set Master 100% unmute; mode "default"
 	bindsym minus exec amixer -q set Master 100% mute; mode "default"
 
+	bindsym Down exec playerctl play-pause; mode "default"
+	bindsym Up exec playerctl stop; mode "default"
+	bindsym Right exec playerctl next
+	bindsym Left exec playerctl previous
+
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
 	bindsym Control+bracketleft mode "default"
 }
-bindsym $mod+m mode "volume"
+bindsym $mod+m mode "media"
 
 mode "escape" {
 	bindsym Return mode "default"
